# godofwar-gameplay-tweaks

./: CMakeLists.txt  CMakePresets.json  CMakeUserEnvVars.json  Make-Release.ps1  README.md  vcpkg.json
resources/mods/: decompile_lua_files.ps1  loader_config.toml
resources/mods/lua/: readme.txt
resources/mods/lua_source/: readme.txt
resources/mods/lua_tools/: readme.txt
source/: CMakeLists.txt  Lazy.h  ModConfig.cpp  ModConfig.h  NewlineSplitterDistSink.h  Offsets.cpp  Offsets.h  XUtil.cpp  XUtil.h  dllmain.cpp  pch.h  version_exports.cpp  version_exports.inc
source/Hooks/: CameraHooks.cpp  CameraHooks.h  IntroLogoHook.cpp  IntroLogoHook.h  LogHooks.cpp  LogHooks.h  LuaScriptHook.cpp  LuaScriptHook.h
source/Kinetica/: Array.h  CPtr.h  Common.h  EffectParam.h  GameModule.cpp  GameModule.h  Lua.cpp  Lua.h  Matrix.h  Position.h  RTTI.cpp  RTTI.h  Renderer.cpp  Renderer.h  StringHash.h  Vector3.h  Vector4.h  WadChunk.h  goPlayer.h  goSoldier.h
source/Kinetica/Camera/: Blender.h  Camera.h
source/Kinetica/DebugUI/: DebugUI.cpp  DebugUI.h  DebugUIWindow.h  DemoWindow.cpp  DemoWindow.h  LogWindow.cpp  LogWindow.h  MainMenuBar.cpp  MainMenuBar.h
source/RTTI/: MSRTTI.cpp  MSRTTI.h  RTTICSharpExporter.cpp  RTTICSharpExporter.h  RTTIIDAExporter.cpp
